bugfix: blurry diagrams on resize

--- a/src/style.css
+++ b/src/style.css
@@ -620,7 +620,6 @@ body {
 
 .preview-transform-wrapper {
     transform-origin: 0 0;
-    will-change: transform;
     display: inline-block;
 }
 
